--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div id="verticalButtons">
         <button onclick="save()">💾</button>
         <button onclick="discard()">🗑️</button>
+        <button onclick="loadBest()">⭐</button>
     </div>
     <canvas id="networkCanvas"></canvas>
+    <script src="trained.js"></script>
     <script src="utils.js"></script>
     <script src="visualizer.js"></script>
     <script src="network.js"></script>
